--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,96 @@
     <title>Plant</title>
 </head>
 <body>
-   
+    <header class="header container">
+        <section class="header_logo">
+            <svg width="77" height="27" viewBox="0 0 77 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.541193 26.7273V5.72727H5.35369V8.34233H5.50284C5.7017 7.87831 5.98343 7.43087 6.34801 7C6.71922 6.56913 7.18987 6.2178 7.75994 5.94602C8.33665 5.66761 9.02604 5.52841 9.82812 5.52841C10.8887 5.52841 11.8797 5.80682 12.8011 6.36364C13.7292 6.92045 14.4782 7.77888 15.0483 8.93892C15.6184 10.099 15.9034 11.5772 15.9034 13.3736C15.9034 15.1037 15.6283 16.5521 15.0781 17.7188C14.5346 18.8854 13.7988 19.7604 12.8707 20.3438C11.9493 20.9271 10.9252 21.2188 9.7983 21.2188C9.02936 21.2188 8.36316 21.0928 7.79972 20.8409C7.23627 20.589 6.76231 20.2576 6.37784 19.8466C6 19.4356 5.70833 18.9948 5.50284 18.5241H5.40341V26.7273H0.541193ZM5.30398 13.3636C5.30398 14.1856 5.41335 14.9015 5.6321 15.5114C5.85748 16.1212 6.17898 16.5952 6.59659 16.9332C7.02083 17.2647 7.52794 17.4304 8.1179 17.4304C8.71449 17.4304 9.22159 17.2647 9.6392 16.9332C10.0568 16.5952 10.3717 16.1212 10.5838 15.5114C10.8026 14.9015 10.9119 14.1856 10.9119 13.3636C10.9119 12.5417 10.8026 11.8291 10.5838 11.2259C10.3717 10.6226 10.0568 10.1553 9.6392 9.82386C9.22822 9.49242 8.72112 9.3267 8.1179 9.3267C7.52131 9.3267 7.0142 9.48911 6.59659 9.81392C6.17898 10.1387 5.85748 10.6027 5.6321 11.206C5.41335 11.8092 5.30398 12.5284 5.30398 13.3636ZM24.9936 0.636363V21H20.1313V0.636363H24.9936ZM34.0738 21.2585C33.0993 21.2585 32.2343 21.0961 31.4786 20.7713C30.7296 20.4399 30.1363 19.9427 29.6988 19.2798C29.2679 18.6103 29.0525 17.7718 29.0525 16.7642C29.0525 15.9157 29.2016 15.1998 29.4999 14.6165C29.7982 14.0331 30.2092 13.5592 30.7329 13.1946C31.2565 12.83 31.8598 12.5549 32.5425 12.3693C33.2253 12.1771 33.9545 12.0478 34.73 11.9815C35.5984 11.902 36.2977 11.8191 36.828 11.733C37.3583 11.6402 37.7428 11.5109 37.9815 11.3452C38.2267 11.1728 38.3493 10.9309 38.3493 10.6193V10.5696C38.3493 10.0592 38.1737 9.66477 37.8224 9.38636C37.471 9.10795 36.9971 8.96875 36.4005 8.96875C35.7575 8.96875 35.2404 9.10795 34.8493 9.38636C34.4582 9.66477 34.2097 10.0492 34.1036 10.5398L29.6192 10.3807C29.7518 9.45265 30.0932 8.62405 30.6434 7.89489C31.2002 7.15909 31.9625 6.58239 32.9303 6.16477C33.9047 5.74053 35.0747 5.52841 36.4403 5.52841C37.4147 5.52841 38.3129 5.64441 39.1349 5.87642C39.9568 6.1018 40.6727 6.43324 41.2826 6.87074C41.8924 7.30161 42.3631 7.83191 42.6945 8.46165C43.0326 9.09138 43.2016 9.81061 43.2016 10.6193V21H38.6278V18.8722H38.5084C38.2367 19.3892 37.8886 19.8267 37.4644 20.1847C37.0468 20.5426 36.5529 20.8111 35.9829 20.9901C35.4194 21.169 34.7831 21.2585 34.0738 21.2585ZM35.5752 18.0767C36.0989 18.0767 36.5695 17.9706 36.9871 17.7585C37.4114 17.5464 37.7494 17.2547 38.0013 16.8835C38.2532 16.5057 38.3792 16.0682 38.3792 15.571V14.1193C38.24 14.1922 38.0709 14.2585 37.8721 14.3182C37.6798 14.3778 37.4677 14.4342 37.2357 14.4872C37.0037 14.5402 36.7651 14.5866 36.5198 14.6264C36.2745 14.6662 36.0392 14.7027 35.8138 14.7358C35.3564 14.8087 34.9654 14.9214 34.6405 15.0739C34.3224 15.2263 34.0771 15.4252 33.9047 15.6705C33.739 15.9091 33.6562 16.1941 33.6562 16.5256C33.6562 17.0294 33.8351 17.4138 34.1931 17.679C34.5577 17.9441 35.0184 18.0767 35.5752 18.0767ZM52.7168 12.2898V21H47.8546V5.72727H52.4782V8.53125H52.6472C52.9853 7.59659 53.562 6.86411 54.3774 6.33381C55.1927 5.79688 56.1638 5.52841 57.2907 5.52841C58.3646 5.52841 59.2959 5.77036 60.0847 6.25426C60.8802 6.73153 61.4967 7.40104 61.9342 8.26278C62.3783 9.1179 62.5971 10.1188 62.5904 11.2656V21H57.7282V12.2202C57.7348 11.3717 57.5194 10.7088 57.0819 10.2315C56.651 9.75426 56.0511 9.51562 55.2822 9.51562C54.7718 9.51562 54.321 9.62831 53.9299 9.85369C53.5454 10.0724 53.2472 10.3873 53.035 10.7983C52.8295 11.2093 52.7235 11.7064 52.7168 12.2898ZM75.9015 5.72727V9.30682H66.2665V5.72727H75.9015ZM68.285 2.06818H73.1472V16.1974C73.1472 16.4957 73.1936 16.7377 73.2864 16.9233C73.3858 17.1023 73.5284 17.2315 73.714 17.3111C73.8996 17.384 74.1216 17.4205 74.3802 17.4205C74.5658 17.4205 74.7613 17.4039 74.9668 17.3707C75.1789 17.331 75.338 17.2978 75.4441 17.2713L76.1799 20.7812C75.9479 20.8475 75.6197 20.9304 75.1955 21.0298C74.7779 21.1293 74.2774 21.1922 73.6941 21.2188C72.5539 21.2718 71.5762 21.1392 70.7608 20.821C69.9521 20.4962 69.3323 19.9924 68.9015 19.3097C68.4772 18.6269 68.2717 17.7685 68.285 16.7344V2.06818Z" fill="#155B0A"/>
+            </svg>
+        </section>
+
+        <nav class="header_nav">
+            <button class="burger_menu">
+                <svg width="30" height="25" viewBox="0 0 30 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 1.89394C0 0.847949 0.839355 0 1.875 0H28.125C29.1606 0 30 0.847949 30 1.89394C30 2.93993 29.1606 3.78788 28.125 3.78788H1.875C0.839355 3.78788 0 2.93993 0 1.89394Z" fill="#155B0A"/>
+                    <path d="M0 12.5C0 11.454 0.839355 10.6061 1.875 10.6061H28.125C29.1606 10.6061 30 11.454 30 12.5C30 13.546 29.1606 14.3939 28.125 14.3939H1.875C0.839355 14.3939 0 13.546 0 12.5Z" fill="#155B0A"/>
+                    <path d="M1.875 21.2121C0.839355 21.2121 0 22.0601 0 23.1061C0 24.1521 0.839355 25 1.875 25H28.125C29.1606 25 30 24.1521 30 23.1061C30 22.0601 29.1606 21.2121 28.125 21.2121H1.875Z" fill="#155B0A"/>
+                </svg>   
+            </button>
+            <div class="main_menu hidden">
+                <ul class="main_list">
+                    <li class="main_list_item"><a href="#">Каталог</a></li>
+                    <li class="main_list_item"><a href="#">Советы по уходу</a></li>
+                    <li class="main_list_item"><a href="#">Оплата и доставка</a></li>
+                    <li class="main_list_item"><a href="#">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="profile_menu hidden">
+                <button class="profile_button">
+                    <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.5417 18.2083C14.7759 18.2083 18.2083 14.7759 18.2083 10.5417C18.2083 6.30748 14.7759 2.875 10.5417 2.875C6.30748 2.875 2.875 6.30748 2.875 10.5417C2.875 14.7759 6.30748 18.2083 10.5417 18.2083Z" stroke="#353F38" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M20.125 20.125L15.9563 15.9562" stroke="#353F38" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>      
+                </button>
+                <button class="profile_button">
+                    <svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.4828 15.2645C9.13173 15.2645 5.41602 15.9223 5.41602 18.557C5.41602 21.1916 9.10816 21.873 13.4828 21.873C17.8339 21.873 21.5485 21.2141 21.5485 18.5805C21.5485 15.947 17.8574 15.2645 13.4828 15.2645Z" stroke="#353F38" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.4828 11.5066C16.3381 11.5066 18.6524 9.19126 18.6524 6.3359C18.6524 3.48055 16.3381 1.16626 13.4828 1.16626C10.6274 1.16626 8.31204 3.48055 8.31204 6.3359C8.3024 9.18162 10.6017 11.497 13.4463 11.5066H13.4828Z" stroke="#353F38" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+                <button class="profile_button">
+                    <svg width="34" height="27" viewBox="0 0 34 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8 2.6189H11.2727L13.4655 13.4584C13.5403 13.8311 13.7452 14.1659 14.0444 14.4042C14.3435 14.6425 14.7178 14.769 15.1018 14.7618H23.0545C23.4385 14.769 23.8129 14.6425 24.112 14.4042C24.4112 14.1659 24.6161 13.8311 24.6909 13.4584L26 6.66652H12.0909" stroke="#353F38" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M14.5452 19.3811C14.9971 19.3811 15.3634 19.0186 15.3634 18.5715C15.3634 18.1245 14.9971 17.762 14.5452 17.762C14.0934 17.762 13.7271 18.1245 13.7271 18.5715C13.7271 19.0186 14.0934 19.3811 14.5452 19.3811Z" stroke="#353F38" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M23.1815 19.3811C23.6333 19.3811 23.9996 19.0186 23.9996 18.5715C23.9996 18.1245 23.6333 17.762 23.1815 17.762C22.7296 17.762 22.3633 18.1245 22.3633 18.5715C22.3633 19.0186 22.7296 19.3811 23.1815 19.3811Z" stroke="#353F38" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+            </div>
+        </nav>
+    </header>
+
+    <main class="main">
+        <section class="main_title">
+            <h1 class="main_title_text">Цветы для вашего дома</h1>
+        </section>
+        <section class="main_content container">
+            <p class="main_text">
+                Растения в кашпо станут красивым и модным дополнением интерьера вашей квартиры или офиса.
+            </p>
+            <button class="main_button">Перейти в каталог</button>
+        </section>       
+    </main>
+
+
+    <aside class="product container">
+        <section class="product_card">
+            <div class="product_content">
+                <h2 class="product_title">Фикусы</h2>
+                <p class="product_text">Эффектные украшения интерьера</p>
+            </div>
+            <div class="product_img">
+                <img src="img/1_mobile.png" alt="Фикусы">
+            </div>
+        </section>
+
+        <section class="product_card">
+            <div class="product_content">
+                <h2 class="product_title">Суккуленты</h2>
+                <p class="product_text">Маленькие и модные</p>
+            </div>
+            <div class="product_img">
+                <img src="img/2_mobile.png" alt="Суккуленты">
+            </div>
+        </section>
+
+        <section class="product_card">
+            <div class="product_content">
+                <h2 class="product_title">Пальмы</h2>
+                <p class="product_text">Пышные и неприхотливые пальмы - элегантный предмет декора</p>
+            </div>
+            <div class="product_img">
+                <img src="img/3_mobile.png" alt="Пальмы">
+            </div>
+        </section>
+    </aside>
 </body>
 </html>
